--- a/demonlist/styleDL.css
+++ b/demonlist/styleDL.css
@@ -89,7 +89,7 @@ body {
 }
 
 .details {
-    width: 40vw;
+    width: 50vw;
     display: grid;
 }
 
@@ -98,50 +98,32 @@ body {
     grid-template-columns: 1fr 1fr;
 }
 
-.table {
+.brick {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    padding: 1%;
+    line-height: 0;
+}
+
+.table {
+    display: grid;
+    grid-template-columns: 1fr;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    margin: 2%;
     align-items: center;
     text-align: center;
-}
-
-.block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 12px;
-    margin-top: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.nlwText {
-    position: relative;
-    margin-bottom: 6%;
-    line-height: 1.2;
+    margin: 2%;
 }
 
 .aem,
 .gddl,
 .enj,
+.nlw,
 .attempts,
 .wf,
 .peak,
 .peakList {
-    margin-top: 0px;
-    margin-bottom: 0px;
     font-size: 20px;
-    align-items: center;
-    text-align: center;
-}
-
-.nlw {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-size: 16px;
     align-items: center;
     text-align: center;
 }
