--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@
 
 a {
     font-size: 16px;
+    margin-bottom: 4px;
+}
+
+.container {
     display: grid;
     grid-template-columns: 1fr;
     text-align: left;
-    margin-bottom: 4px;
 }
 
 .title {
