--- a/style.css
+++ b/style.css
@@ -1,87 +1,82 @@
+body {
+    background:
+        linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+        url("images/clear.png") center / cover no-repeat;
+    min-height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
+
 .header {
     align-items: center;
     text-align: center;
-}
-
-.container {
-    font-size: 16px;
-    margin-bottom: 4px;
-    text-align: left;
-}
-
-.title {
-    background-color: #ffeebb;
+    background-color: rgba(255, 220, 160, 0.4);
+    border: 3px solid black;
     padding: 10px;
+    margin: 10px;
+    line-height: 0;
+}
+
+.sidepanel {
+    font-size: 18px;
+    text-align: left;
+    background-color: rgba(255, 180, 255, 0.4);
+    border: 3px solid black;
+    margin: 10px;
+    height: 80vh;
+    text-align: left;
+    overflow: visible;
+}
+
+.maindiv {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
+.contentsplit {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
 
 .info {
+    font-size: 18px;
     text-align: left;
-    margin-left: 20%;
-}
-
-.header h1 {
-    padding: 0;
-    margin: 0;
-}
-
-.gdicon {
-    position: absolute;
-    align-items: center;
-    text-align: center;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: 10px;
 }
 
 .milkshake {
-    position: absolute;
-    right: 0;
-    top: 10%;
+    max-width: 90%;
+    border: 3px solid black;
+    margin-right: 10px;
+    margin-top: 80px;
 }
 
-.media {
+.bottomextras {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 4%;
-    display: flex;
+    bottom: 5%;
+    display: grid;
+    grid-template-columns: 1fr;
     justify-content: center;
     justify-items: center;
-    gap: 10%;
+    gap: 5%;
     padding: 1%;
 }
 
-.media img:hover,
-.gaming img:hover {
-    scale: 1.1;
-}
-
+.media,
 .gaming {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0%;
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    gap: 10%;
-    padding: 1%;
-}
-
-.contents {
-    position: absolute;
-    top: 0;
-    background-color: #fdf;
-    border-right: 30px double #fff;
-    margin-top: 10px;
-    width: 15%;
-    height: 100vh;
-    text-align: left;
-    overflow: visible;
+    display: inline-flex;
+    gap: 20px;
 }
 
 .media img,
 .gaming img {
     height: 30px;
     border-radius: 5px;
+}
+
+.media img:hover,
+.gaming img:hover {
+    scale: 1.1;
 }
