--- a/demonlist/styleDL.css
+++ b/demonlist/styleDL.css
@@ -1,4 +1,11 @@
 body {
+    background:
+        linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+        url("../images/clear.png") center / cover no-repeat;
+ 	background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
+
     text-align: center;
     background-color: #000000;
     font-family:
@@ -25,6 +32,54 @@ body {
     justify-content: space-between;
     overflow: hidden;
     align-items: center;
+    & .upperDetails {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        margin: 1%;
+        padding: 0 2% 0 2%;
+        text-align: left;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
+        font-size: 12px;
+    }
+    & .details {
+        width: 50vw;
+        display: grid;
+    }
+    & .stats {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    & .brick {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding: 1%;
+        line-height: 0;
+    }
+    & .table {
+        display: grid;
+        grid-template-columns: 1fr;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
+        align-items: center;
+        text-align: center;
+        margin: 2%;
+    }
+    & #date {
+        text-align: right;
+    }
+    & .aem,
+    .gddl,
+    .enj,
+    .nlw,
+    .attempts,
+    .wf,
+    .peak,
+    .peakList {
+        font-size: 20px;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 .card::before {
@@ -47,17 +102,14 @@ body {
     background-size: cover;
     background-position: center;
     filter: blur(40px) brightness(2);
-
     padding: 5px;
 
     mask:
         linear-gradient(#fff 0 0) content-box,
         linear-gradient(#fff 0 0);
-
     -webkit-mask:
         linear-gradient(#fff 0 0) content-box,
         linear-gradient(#fff 0 0);
-
     mask-composite: exclude;
     -webkit-mask-composite: xor;
     pointer-events: none;
@@ -73,57 +125,27 @@ body {
     scale: 1.05;
 }
 
-.upperDetails {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    margin: 1%;
-    padding: 0 2% 0 2%;
-    text-align: left;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    font-size: 12px;
-}
-
-#date {
-    text-align: right;
-}
-
-.details {
-    width: 50vw;
-    display: grid;
-}
-
-.stats {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.brick {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 1%;
-    line-height: 0;
-}
-
-.table {
-    display: grid;
-    grid-template-columns: 1fr;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
+.record {
+    position: relative;
+    border-radius: 5px;
+    height: 30px; 
+    color: black;
+    background-color: rgba(30, 30, 30, 0.3);
+    margin: 2px;
+    padding: 10px;
+	display: inline-flex;
+    overflow: hidden;
     align-items: center;
-    text-align: center;
-    margin: 2%;
-}
-
-.aem,
-.gddl,
-.enj,
-.nlw,
-.attempts,
-.wf,
-.peak,
-.peakList {
-    font-size: 20px;
-    align-items: center;
-    text-align: center;
+    & .details {
+        display: grid;
+	width: 70vw;
+    }
+    & .stats {
+        display: grid;
+        grid-template-columns: 4fr repeat(7, 1fr);
+        padding: 1%;
+    }
+    & .title {
+        text-align: left;
+    }
 }
