--- a/demonlist/styleDL.css
+++ b/demonlist/styleDL.css
@@ -2,7 +2,7 @@ body {
     background:
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
         url("../images/clear.png") center / cover no-repeat;
- 	background-attachment: fixed;
+    background-attachment: fixed;
     min-height: 100vh;
     margin: 0;
 
@@ -128,17 +128,17 @@ body {
 .record {
     position: relative;
     border-radius: 5px;
-    height: 30px; 
+    height: 30px;
     color: black;
     background-color: rgba(30, 30, 30, 0.3);
     margin: 2px;
     padding: 10px;
-	display: inline-flex;
+    display: inline-flex;
     overflow: hidden;
     align-items: center;
     & .details {
         display: grid;
-	width: 70vw;
+        width: 70vw;
     }
     & .stats {
         display: grid;
@@ -148,4 +148,41 @@ body {
     & .title {
         text-align: left;
     }
+}
+
+.options {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    display: inline-flex;
+    flex-direction: column;
+    width: 150px;
+    text-align: center;
+    margin: 10px;
+    gap: 10px;
+    & .selections {
+        display: grid;
+        justify-items: center;
+        gap: 5px;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 10px;
+        padding: 10px;
+        & p {
+            font-size: 24px;
+            line-height: 0px;
+        }
+        & button {
+            font-size: 18px;
+            width: 90%;
+            height: 40px;
+            color: #000;
+            border-radius: 10px;
+        }
+    }
+}
+
+.disclaimer {
+    position: absolute;
+    top: 2%;
+    right: 5%;
 }
