--- a/demonlist/styleDL.css
+++ b/demonlist/styleDL.css
@@ -84,17 +84,16 @@ body {
 
 .card.modern {
     position: relative;
-    line-height: 0;
     border-radius: 5px;
-    height: 120px; /* hardcoding cuz im stupid - this this thumbnail height*/
+    height: 110px;
     color: black;
     width: 70%;
-    margin: 0px;
+    margin: auto;
     padding: 0px;
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     overflow: hidden;
-    align-items: flex-start;
+    align-items: center;
     & p {
         margin: 0;
         padding: 15px;
@@ -102,10 +101,9 @@ body {
     }
     & .detailsModern {
         display: grid;
-        grid-template-columns: 1fr 5fr 3fr 2fr 2fr 2fr;
-        margin: 1%;
+        line-height: 0;
+        grid-template-columns: 1fr 8fr 3fr 2fr 2fr 2fr;
         width: 100%;
-        padding: 0 2% 0 2%;
         text-align: left;
         border-radius: 10px;
     }
@@ -121,7 +119,6 @@ body {
         }
     }
     & .difficulties {
-        margin-top: 5px;
         display: inline-flex;
         flex-direction: column;
         align-items: center;
@@ -133,24 +130,41 @@ body {
     }
     & .peaks,
     .effort {
-        margin-top: 5px;
         display: inline-flex;
         flex-direction: column;
         align-items: center;
         gap: 10px;
     }
-    & .enjModern,
-    .lvlPlace {
+    & .enjModern {
         text-align: center;
         align-items: center;
-        line-height: 1.2;
+    }
+    & .lvlPlace {
+        margin-left: 10%;
+        text-align: center;
     }
     & .dateModern {
         font-size: 20px;
     }
 }
 
-.card::before {
+.card.modern > * {
+    align-items: center;
+}
+
+.card.grid img,
+.card.legacy img {
+    border-radius: 3px;
+}
+
+.gridstyle {
+    display: grid;
+    margin: 7%;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+}
+
+.card.modern::before,
+.card.legacy::before {
     content: "";
     position: absolute;
     inset: 0;
@@ -163,10 +177,11 @@ body {
 }
 
 .card.modern::before {
-    filter: blur(0px) brightness(0.5);
+    filter: blur(2px) brightness(0.5);
 }
 
-.card::after {
+.card.modern::after,
+.card.legacy::after {
     content: "";
     position: absolute;
     inset: 0;
