--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 body {
     background:
-        linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+        linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 1),
+            rgba(255, 255, 255, 0.1)
+        ),
         url("images/clear.png") center / cover no-repeat;
     min-height: 100vh;
     margin: 0;
     overflow: hidden;
+    font-family: "Nunito", "Quicksand", "Comfortaa", sans-serif;
 }
 
 .header {
     align-items: center;
     text-align: center;
-    background-color: rgba(255, 220, 160, 0.4);
-    border: 3px solid black;
+    background: linear-gradient(
+        90deg,
+        rgba(255, 255, 200, 0.8),
+        rgba(255, 255, 255, 0)
+    );
     padding: 10px;
     margin: 10px;
     line-height: 0;
@@ -20,8 +28,11 @@ body {
 .sidepanel {
     font-size: 18px;
     text-align: left;
-    background-color: rgba(255, 180, 255, 0.4);
-    border: 3px solid black;
+    background: linear-gradient(
+        180deg,
+        rgba(255, 120, 255, 0.3),
+        rgba(255, 255, 255, 0)
+    );
     margin: 10px;
     height: 80vh;
     text-align: left;
@@ -46,9 +57,19 @@ body {
 
 .milkshake {
     max-width: 90%;
-    border: 3px solid black;
+    border: 2px solid black;
     margin-right: 10px;
     margin-top: 80px;
+}
+
+.milkdiv {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    & p {
+        line-height: 0;
+        color: #ddd;
+    }
 }
 
 .bottomextras {
